stateDiagram-v2
  Draft : Draft()
  ChangeRequested : ChangeRequested()
  ChangeRequested --> Draft : Accept()
  Review : Review()
  ChangeRequested --> Review : Reject()
  Declined : Declined()
  Declined --> Review : RestartReview()
  Draft --> Review : BeginReview()
  Draft --> Draft : UpdateDocument()
  Review --> ChangeRequested : ChangeNeeded()
  SubmittedToClient : SubmittedToClient()
  Review --> SubmittedToClient : Submit()
  Approved : Approved()
  SubmittedToClient --> Approved : Approve()
  SubmittedToClient --> Declined : Decline()
